--- a/Sequencer/Sequencer.csproj
+++ b/Sequencer/Sequencer.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormStateMachine.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ImageHandling.cs" />
     <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
