--- a/Sequencer/Sequencer.csproj
+++ b/Sequencer/Sequencer.csproj
@@ -101,6 +101,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Lib.ProbabilisticImageFiltering\Lib.ProbabilisticImageFiltering.csproj">
+      <Project>{fac639f2-c42d-4b2f-8835-18764dcf5f40}</Project>
+      <Name>Lib.ProbabilisticImageFiltering</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Lib.SelectionRectangle\Lib.SelectionRectangle.csproj">
       <Project>{15c1984e-dcc6-4722-9780-0f217a6b506e}</Project>
       <Name>Lib.SelectionRectangle</Name>
