Se ha creado una clase en la que unir los datos obtenidos de los blobs mediante CV y la Figura asignada en función del tamaño. Para esta clase se ha implementado el método que dibuja, en el display principal, sobre las piezas, la figura asignada. Se ha creado una clase estática llamada Figures, que es una colección de objetos Figure configurados por el usuario, para establecer los rangos de áreas asignados a cada una.

--- a/Sequencer/Sequencer.csproj
+++ b/Sequencer/Sequencer.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="CVFigureBlob.cs" />
     <Compile Include="DataLogging.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
