Implementado el uso del App.config. Ahora se almacenan todos los parámetros entre ejecuciones. Incluye todos los elementos importantes de la interfaz, como el área de las fguras, las notas de las pistas, ...

--- a/Sequencer/App.config
+++ b/Sequencer/App.config
@@ -3,4 +3,37 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <!-- Webcam Stuff-->
+    <add key="webcamIndex" value="0"/>
+    <add key="webcamFps" value="6"/>
+    <add key="webcamFlipH" value="true"/>
+    <add key="webcamFlipV" value="false"/>
+    <!-- Figures -->
+      <!-- Melodic -->
+    <add key="figureCorcheaMin" value="10"/>
+    <add key="figureCorcheaMax" value="375"/>
+    <add key="figureNegraMin" value="400"/>
+    <add key="figureNegraMax" value="700"/>
+    <add key="figureBlancaMin" value="750"/>
+    <add key="figureBlancaMax" value="1200"/>
+      <!-- Ritmic -->
+    <add key="figureKickMin" value="750"/>
+    <add key="figureKickMax" value="1500"/>
+    <add key="figureSnareMin" value="400"/>
+    <add key="figureSnareMax" value="700"/>
+    <add key="figureHihatMin" value="10"/>
+    <add key="figureHihatMax" value="375"/>
+    <!-- Sequencer -->
+    <add key="seqBpm" value="120"/>
+    <add key="seqModeIndex" value="0"/>
+    <add key="seqMainVol" value="75"/>
+    <add key="seqLastBoardFile" value="tablero_8_rectangular.xml"/>
+    <add key="seqTrack1Notes" value="C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1,C1"/>
+    <add key="seqTrack2Notes" value="C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2,C2"/>
+    <add key="seqTrack3StepLengthIndex" value="1"/>
+    <add key="seqTrack1Vol" value="50"/>
+    <add key="seqTrack2Vol" value="50"/>
+    <add key="seqTrack3Vol" value="50"/>
+  </appSettings>
 </configuration>
